# julianails

./: .env-example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
core/: settings.py  urls.py
core/templates/: base.html
core/templates/static/css/: input.css  output.css  style.css
core/templates/static/js/: mb_global.js  tailwind_person.js  ui_service.js
portfolio/: admin.py  apps.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_alter_service_description.py  0003_businessconfig_hero_image.py  0004_visit.py  0005_blockeddate_scheduleconfig.py
portfolio/models/: base.py  booking_config.py  business_config.py  portfolio_item.py  schedule_config.py  service.py  visit.py
portfolio/services/: calendar.py  visit.py
portfolio/templates/portfolio/admin/portfolio/visit/: change_list.html
portfolio/templates/portfolio/partials/: about.html  booking.html  footer.html  hero.html  navbar.html  portfolio.html  services.html
tests/portfolio/: conftest.py
tests/portfolio/models/: test_booking_config.py  test_business_config.py  test_portifolio_item.py  test_service.py  test_visit.py
tests/portfolio/views/: test_index.py
